--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <p>Meu coração, te escrevo com a alma inteira,</p>
                 <p>Neste dia em que o amor floresce de maneira verdadeira.</p>
                 <p>Vida, é contigo que tudo faz sentido,</p>
-                <p>Cada momento ao teu lado é um sonho bem vivido</p>
+                <p>Cada momento ao teu lado é um sonho bem vivido.</p>
                 
                 <p>Meu bem, és mais que amor, és meu lar,</p>
                 <p>A razão do meu sorriso, meu porto, meu lugar.</p>
