--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
             <div class="heart"></div>
         </div>
         <div class="message">
+            <div style="margin-bottom: 2rem;">
+                <a href="fotos.html" style="display: inline-block; padding: 10px 20px; background: #ff4b5c; color: white; text-decoration: none; border-radius: 25px;">
+                    📸 Ver Nossas Fotos
+                </a>
+            </div>
             <h1>Para Anna Gabrielly</h1>
             <p class="dedication">Querida, amor da minha vida!</p>
-            <div class="poem">
+            <div class="poema">
                 <h2>Você em Cada Palavra</h2>
                 <p>Meu coração, te escrevo com a alma inteira,</p>
                 <p>Neste dia em que o amor floresce de maneira verdadeira.</p>
