--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p class="signature">Pra sempre teu - com versos, alma e emoção,</p>
                 <p class="signature">Assinado por quem te ama:</p>
                 <p class="signature">Teu bobo, teu poeta, teu coração, </p>
-                <p class="signature">Teu Leite Azedo !</p>
+                <p class="signature">Teu eterno Leite Azedo !</p>
             </div>
         </div>
     </div>
