--- a/fotos.html
+++ b/fotos.html
@@ -84,7 +84,7 @@
         function createPhotoCard(photoName) {
             return `
                 <div class="photo-card">
-                    <img src="fotos/${photoName}" alt="Nossa foto" />
+                    <img src="https://raw.githubusercontent.com/JotaVee02/dia-dos-namorados/main/fotos/${photoName}" alt="Nossa foto" />
                 </div>
             `;
         }
