--- a/fotos.html
+++ b/fotos.html
@@ -8,10 +8,10 @@
     <style>
         .gallery {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            gap: 20px;
-            padding: 20px;
-            max-width: 1200px;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 30px;
+            padding: 30px;
+            max-width: 1400px;
             margin: 2rem auto;
         }
         .photo-card {
@@ -26,9 +26,13 @@
         }
         .photo-card img {
             width: 100%;
-            height: 200px;
+            height: 300px;
             object-fit: cover;
             display: block;
+            cursor: pointer;
+        }
+        .photo-card img:hover {
+            transform: scale(1.05);
         }
         .loading {
             display: flex;
