--- a/fotos.html
+++ b/fotos.html
@@ -8,10 +8,10 @@
     <style>
         .gallery {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 30px;
-            padding: 30px;
-            max-width: 1400px;
+            grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+            gap: 20px;
+            padding: 20px;
+            max-width: 1800px;
             margin: 2rem auto;
         }
         .photo-card {
@@ -19,20 +19,13 @@
             border-radius: 15px;
             overflow: hidden;
             box-shadow: 0 4px 16px rgba(0,0,0,0.15);
-            transition: transform 0.3s ease;
-        }
-        .photo-card:hover {
-            transform: translateY(-5px);
+            height: 500px;
         }
         .photo-card img {
             width: 100%;
-            height: 300px;
-            object-fit: cover;
+            height: 100%;
+            object-fit: contain;
             display: block;
-            cursor: pointer;
-        }
-        .photo-card img:hover {
-            transform: scale(1.05);
         }
         .loading {
             display: flex;
@@ -80,8 +73,7 @@
             'foto3.jpeg',
             'foto4.jpeg',
             'foto5.jpeg',
-            'foto6.jpeg',
-            'foto7.jpeg'
+            'foto6.jpeg'
         ];
 
         // Função para criar um card de foto
