--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Para Anna Gabrielly</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#ff6b6b">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="apple-touch-icon" href="images/icon-192x192.png">
+    <script src="js/spotify.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -19,6 +26,21 @@
             </div>
             <h1>Para Anna Gabrielly</h1>
             <p class="dedication">Querida, amor da minha vida!</p>
+            <!-- Player do Spotify -->
+            <div class="spotify-player">
+                <h3>Nossa Música Especial</h3>
+                <iframe id="spotifyPlayer" 
+                        src="" 
+                        width="100%" 
+                        height="80" 
+                        frameborder="0" 
+                        allowtransparency="true" 
+                        allow="encrypted-media"
+                        loading="lazy">
+                </iframe>
+                <p class="spotify-note">A música pode demorar alguns segundos para carregar</p>
+            </div>
+
             <div class="poema">
                 <h2>Você em Cada Palavra</h2>
                 <p>Meu coração, te escrevo com a alma inteira,</p>
@@ -53,5 +75,19 @@
             </div>
         </div>
     </div>
+    <script>
+        // Registrar Service Worker
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/sw.js')
+                    .then(registration => {
+                        console.log('ServiceWorker registrado com sucesso:', registration.scope);
+                    })
+                    .catch(error => {
+                        console.log('Falha ao registrar o ServiceWorker:', error);
+                    });
+            });
+        }
+    </script>
 </body>
 </html>
