--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#ff6b6b">
     <title>Para Anna Gabrielly</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -29,16 +32,25 @@
             <!-- Player do Spotify -->
             <div class="spotify-player">
                 <h3>Nossa Música Especial</h3>
-                <iframe id="spotifyPlayer" 
-                        src="" 
-                        width="100%" 
-                        height="80" 
-                        frameborder="0" 
-                        allowtransparency="true" 
-                        allow="encrypted-media"
-                        loading="lazy">
+                <iframe 
+                    id="spotifyPlayer"
+                    title="Player do Spotify"
+                    src=""
+                    width="100%"
+                    height="500"
+                    frameBorder="0"
+                    allowtransparency="true"
+                    allow="encrypted-media; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"
+                    style="border: none; border-radius: 12px;"
+                    aria-label="Player de música do Spotify">
                 </iframe>
-                <p class="spotify-note">A música pode demorar alguns segundos para carregar</p>
+                <p class="spotify-note">A playlist pode demorar alguns segundos para carregar</p>
+                <div class="spotify-actions">
+                    <a href="spotify:playlist:0iqiAiDsWTZfc20aemNJBw" class="spotify-button">
+                        <i class="fab fa-spotify"></i> Abrir no Spotify
+                    </a>
+                </div>
             </div>
 
             <div class="poema">
