--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="theme-color" content="#ff6b6b">
     <meta name="description" content="Um presente especial de amor para Anna Gabrielly">
     <title>Para Anna Gabrielly</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>❤️</text></svg>">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -80,7 +79,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/hearts.js"></script>
+    <script src="./js/hearts.js"></script>
     <script>
         // Inicializar o player do Spotify
         document.addEventListener('DOMContentLoaded', function() {
@@ -89,16 +88,7 @@
                 player.src = 'https://open.spotify.com/embed/playlist/0iqiAiDsWTZfc20aemNJBw?theme=0';
             }
             
-            // Registrar Service Worker
-            if ('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('sw.js')
-                    .then(registration => {
-                        console.log('ServiceWorker registrado com sucesso:', registration.scope);
-                    })
-                    .catch(error => {
-                        console.log('Falha ao registrar o ServiceWorker:', error);
-                    });
-            }
+            // Service Worker removido para simplificar
         });
     </script>
 </body>
