--- a/index.html
+++ b/index.html
@@ -55,41 +55,29 @@
     <div class="content-section">
         <h2>Nossa Playlist Especial</h2>
         <div class="spotify-container">
-            <div class="spotify-player">
+            <div class="spotify-container">
+                <h2>Nossa Playlist Especial</h2>
                 <iframe id="spotifyPlayer" 
-                        title="Player do Spotify"
-                        src=""
-                        width="100%"
-                        height="380"
-                        frameborder="0"
-                        allowtransparency="true"
-                        allow="encrypted-media"
-                        style="border: none; border-radius: 12px;">
+                    title="Player do Spotify"
+                    src="https://open.spotify.com/embed/playlist/0iqiAiDsWTZfc20aemNJBw?theme=0" 
+                    width="100%" 
+                    height="380" 
+                    frameborder="0" 
+                    allowtransparency="true" 
+                    allow="encrypted-media"
+                    style="border: none; border-radius: 12px;">
                 </iframe>
                 <div class="spotify-actions">
-                    <a href="https://open.spotify.com/playlist/0iqiAiDsWTZfc20aemNJBw" target="_blank" class="spotify-button">
+                    <a href="https://open.spotify.com/playlist/0iqiAiDsWTZfc20aemNJBw" class="spotify-button" target="_blank">
                         <i class="fab fa-spotify"></i> Abrir no Spotify
                     </a>
                 </div>
-            </div>
-            <div class="spotify-note">
                 <p><i class="fas fa-info-circle"></i> Para ouvir músicas completas, abra no aplicativo do Spotify.</p>
             </div>
         </div>
     </div>
 
     <!-- Scripts -->
-    <script src="./js/hearts.js"></script>
-    <script>
-        // Inicializar o player do Spotify
-        document.addEventListener('DOMContentLoaded', function() {
-            const player = document.getElementById('spotifyPlayer');
-            if (player) {
-                player.src = 'https://open.spotify.com/embed/playlist/0iqiAiDsWTZfc20aemNJBw?theme=0';
-            }
-            
-            // Service Worker removido para simplificar
-        });
-    </script>
+    <script src="js/hearts.js"></script>
 </body>
 </html>
