--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="theme-color" content="#ff6b6b">
     <meta name="description" content="Um presente especial de amor para Anna Gabrielly">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Para Anna Gabrielly</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>❤️</text></svg>">
     <link rel="stylesheet" href="styles.css">
@@ -57,22 +61,33 @@
         <div class="spotify-container">
             <div class="spotify-container">
                 <h2>Nossa Playlist Especial</h2>
-                <iframe id="spotifyPlayer" 
-                    title="Player do Spotify"
-                    src="https://open.spotify.com/embed/playlist/0iqiAiDsWTZfc20aemNJBw?theme=0" 
-                    width="100%" 
-                    height="380" 
-                    frameborder="0" 
-                    allowtransparency="true" 
-                    allow="encrypted-media"
-                    style="border: none; border-radius: 12px;">
-                </iframe>
+                <div class="playlist-intro">
+                    <i class="fas fa-heart"></i>
+                    <p>Uma seleção especial de músicas que me fazem pensar em você</p>
+                </div>
+                
+                <div class="spotify-wrapper">
+                    <iframe id="spotifyPlayer" 
+                        title="Nossa Playlist Especial"
+                        src="https://open.spotify.com/embed/playlist/0iqiAiDsWTZfc20aemNJBw?theme=0&utm_source=generator" 
+                        width="100%" 
+                        height="380"
+                        frameborder="0" 
+                        allowfullscreen="" 
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                        loading="lazy"
+                        style="border: none; border-radius: 12px;">
+                    </iframe>
+                </div>
+                
                 <div class="spotify-actions">
                     <a href="https://open.spotify.com/playlist/0iqiAiDsWTZfc20aemNJBw" class="spotify-button" target="_blank">
                         <i class="fab fa-spotify"></i> Abrir no Spotify
                     </a>
+                    <p class="spotify-note">
+                        <i class="fas fa-headphones"></i> Toque para ouvir uma prévia ou abra no app para música completa
+                    </p>
                 </div>
-                <p><i class="fas fa-info-circle"></i> Para ouvir músicas completas, abra no aplicativo do Spotify.</p>
             </div>
         </div>
     </div>
