--- a/fotos.html
+++ b/fotos.html
@@ -107,6 +107,9 @@
 </head>
 <body>
     <div class="container">
+        <a href="index.html" class="back-button">
+            <i class="fas fa-arrow-left"></i> Voltar
+        </a>
         <h1>Nossos Momentos Especiais</h1>
         <div class="gallery" id="photoGallery">
             <!-- As fotos serão carregadas dinamicamente -->
@@ -122,14 +125,18 @@
     </div>
 
     <script>
-        // Lista das fotos (formato .jpeg)
+        // Array com os nomes das fotos
         const photos = [
             'fotos/foto1.jpeg',
             'fotos/foto2.jpeg',
             'fotos/foto3.jpeg',
             'fotos/foto4.jpeg',
             'fotos/foto5.jpeg',
-            'fotos/foto6.jpeg'
+            'fotos/foto6.jpeg',
+            'fotos/foto7.jpeg',
+            'fotos/foto8.jpeg',
+            'fotos/foto9.jpeg',
+            'fotos/foto10.jpeg'
         ];
 
         // Função para criar um card de foto
